@@ -6,6 +6,8 @@ import java.awt.Paint;
 import java.awt.Stroke;
 import java.awt.geom.AffineTransform;
 
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
 import edu.colorado.phet.fractionsintro.buildafraction.model.BuildAFractionModel;
 import edu.colorado.phet.fractionsintro.buildafraction.model.Scene;
 import edu.colorado.phet.fractionsintro.common.view.AbstractFractionsCanvas;
@@ -28,6 +30,17 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas implements Num
         currentNumberSceneLevel = new PNode();
         currentNumberSceneLevel.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, this ) );
         addChild( new VisibilityNode( model.selectedScene.valueEquals( Scene.numbers ), currentNumberSceneLevel ) );
+
+        addChild( new ResetAllButtonNode( new Resettable() {
+            public void reset() {
+                model.resetAll();
+                currentNumberSceneLevel.setTransform( AffineTransform.getTranslateInstance( 0, 0 ) );
+                currentNumberSceneLevel.removeAllChildren();
+                currentNumberSceneLevel.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, BuildAFractionCanvas.this ) );
+            }
+        }, this, 18, Color.black, Color.orange ) {{
+            setOffset( STAGE_SIZE.getWidth() - getFullBounds().getWidth() - INSET, STAGE_SIZE.getHeight() - getFullBounds().getHeight() - INSET );
+        }} );
     }
 
     public void goToNext() {
