@@ -1,3 +1,4 @@
+Added reset all button
 Randomized level 0
 Added fractions >1
 Fixed: number should become pickable after splitting a fraction
